--- a/index.html
+++ b/index.html
@@ -5,180 +5,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta content="zh-cn" http-equiv="Content-Language" />
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>XXXXXXXXXXXXX</title>
-
-<style type="text/css">
-.auto-style1 {
-	text-align: center;
-}
-.auto-style2 {
-	font-size: x-large;
-	margin-top: 13px;
-}
-.auto-style4 {
-	font-size: xx-large;
-}
-.auto-style5 {
-	border-left-width: 0px;
-	border-right-color: #C0C0C0;
-	border-right-width: 0px;
-	border-top-width: 0px;
-	border-bottom-color: #C0C0C0;
-	border-bottom-width: 0px;
-}
-.auto-style7 {
-	text-align: center;
-	border-style: solid;
-	border-width: 1px;
-}
-.auto-style10 {
-	margin-top: 9px;
-}
-.auto-style11 {
-	font-size: x-large;
-}
-.auto-style13 {
-	text-align: center;
-	font-size: x-large;
-	border-style: solid;
-	border-width: 1px;
-}
-.auto-style14 {
-	font-size: x-large;
-	background-color: #DDDDFC;
-	font-weight: bold;
-	color: #EC5A10;
-}
-.auto-style15 {
-	font-size: x-large;
-	margin-left: 0px;
-}
-.auto-style16 {
-	font-size: x-large;
-	font-weight: bold;
-	color: #1010EC;
-}
-.auto-style17 {
-	text-align: right;
-	font-size: x-large;
-	font-weight: bold;
-	color: #1010EC;
-}
-.auto-style18 {
-	text-align: right;
-}
-.auto-style19 {
-	text-align: left;
-}
-.auto-style20 {
-	font-weight: normal;
-	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-.auto-style21 {
-	text-align: center;
-	margin-left: 5.2in;
-}
-.auto-style22 {
-	font-weight: normal;
-}
-</style>
+	<meta content="zh-cn" http-equiv="Content-Language" />
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+	<title>论文标题-首页</title>
+	<link rel="stylesheet" href="css.css" media="all">
 </head>
 
-<body style="margin-left: 80px; margin-right: 34px;">
-<div class="auto-style19">
-<div class="auto-style18">
+<body>
 
-<p class="auto-style21" style="language: zh-CN; margin-top: 0pt; margin-bottom: 0pt; direction: ltr; unicode-bidi: embed; mso-line-break-override: none; word-break: normal; punctuation-wrap: hanging; height: 52px; width: 750px; text-align: center; margin-left: 0.04in;" align="center">
-<span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: en-US; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-(please</span><span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: zh-CN; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-</span>
-<span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: en-US; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-enter</span><span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: zh-CN; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-</span>
-<span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: en-US; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-the</span><span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: zh-CN; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-</span>
-<span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: en-US; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-following</span><span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: zh-CN; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-</span>
-<span class="auto-style4" style="font-family: 等线; mso-ascii-font-family: 等线; mso-fareast-font-family: 等线; mso-bidi-font-family: +mn-cs; mso-ascii-theme-font: minor-latin; mso-fareast-theme-font: minor-fareast; mso-bidi-theme-font: minor-bidi; color: black; mso-color-index: 1; mso-font-kerning: 12.0pt; language: en-US; text-combine: letters; mso-style-textfill-type: solid; mso-style-textfill-fill-themecolor: text1; mso-style-textfill-fill-color: black; mso-style-textfill-fill-alpha: 100.0%">
-information)</span></p>
 
-<table style="width: 90%; height: 100%" cellspacing="1" class="auto-style5">
-	<tr>
-		<td class="auto-style7" style="height: 16px; width: 508px">
-		<h2><strong>Age:</strong></h2>
-		<h3>(<span class="auto-style22">range 0-120 years</span><strong>)</strong></h3>
-		</td>
-		<td class="auto-style13" style="height: 16px"><strong>
-		<input class="auto-style11" name="Text2" style="width: 157px; height: 39px" type="text" id="age" /></strong></td>
-	</tr>
-	<tr>
-		<td class="auto-style7" style="width: 508px; height: 26px">
-		<h2><strong>Smoking:</strong></h2>
-		<h3>(<span class="auto-style22"> options </span>)</h3>
-		</td>
-		<td class="auto-style13" style="height: 35px">
-		<form class="auto-style10" method="post">
-			<strong>
-			<select class="auto-style11" name="Select1" id="smk" style="height: 33px; width: 150px">
-			<option selected="selected" value="1">Yes</option>
-			<option value="0">NO</option>
-			</select></strong></form>
-		</td>
-	</tr>
-	<tr>
-		<td class="auto-style7" style="width: 508px">
-		<h2><strong>Total Bilirubin:</strong></h2>
-		<h3>(<span class="auto-style22"> range 0-100 </span>)</h3>
-		</td>
-		<td class="auto-style13"><strong>
-		<input class="auto-style2" name="Text5" id="tbi" style="width: 157px; height: 39px" type="text" /></strong></td>
-	</tr>
-	<tr>
-		<td class="auto-style7" style="width: 508px">
-		<h2><strong>Ankle Brachial Index (ABI):</strong></h2>
-		<h3 class="auto-style22">( range 0-2 )</h3>
-		</td>
-		<td class="auto-style13"><strong>
-		<input class="auto-style2" name="Text3" id="abi" style="width: 157px; height: 39px" type="text" /></strong></td>
-	</tr>
-	<tr>
-		<td class="auto-style7" style="width: 508px">
-		<h2><strong>Systolic Blood Pressure (SBP):</strong></h2>
-		<h3 class="auto-style22">( range 50-200 )</h3>
-		</td>
-		<td class="auto-style13"><strong>
-		<input class="auto-style2" name="Text4" id="sbp" style="width: 157px; height: 39px" type="text" /></strong></td>
-	</tr>
-	</table>
+<form action="" method="post" class="basic-grey">
+	<h1>
+		论文标题
+		<span>
+			论文作者论文作者论文作者论文作者论文作者
+		</span>
+	</h1>
+	<label>
+		<a href="vat.html"><input type="button" class="button" value="计算腹部脂肪VAT" /></a>
+	
+		<input type="button" class="button" value="计算内脏脂肪ASAT" />
+	
+		<input type="button" class="button" value="计算去脂肌肉FFMV" />
+	</label>
+</form>
 
-			<br />
-</div>
-	<button class="auto-style15" name="Abutton1" onclick="getRisk()" style="height: 57px; width: 273px; margin-left:240px" >Calculate 
-	(please click)</button>
-	<div class="auto-style18">
-
-<p>
-<table style="width: 90%; height: 47px">
-	<tr>
-		<td class="auto-style17" style="height: 62px; width: 508px">
-		<span class="auto-style16">Your 4 year c</span><span class="ILfuVd"><span class="auto-style16">ardiovascular 
-		disease risk</span></span><span class="auto-style16"> is:&nbsp; </span></td>
-		<td style="height: 62px" class="auto-style14"><output name="sum" id="riskValue"></output>&nbsp;
-		</td>
-	</tr>
-	<tr>
-		<td class="auto-style17" style="height: 62px; width: 508px">
-		<span class="auto-style16">Your 4 year </span> <span class="ILfuVd">
-		<span class="auto-style16">CVD risk category is:&nbsp; </span></span></td>
-		<td style="height: 62px" class="auto-style14"><output name="sum" id="riskCate"></output>&nbsp;</td>
-	</tr>
-</table>
-</p>
-</div>
 <script type="text/javascript">
 	function getRisk(){
 	//define return value
@@ -205,7 +56,7 @@ information)</span></p>
 	//alert(returnRisk)//结果弹窗显示
 	}
 </script>
-</div>
+
 </body>
 
 </html>
