--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>论文标题-首页</title>
 	<link rel="stylesheet" href="css.css" media="all">
+	<style type="text/css">
+		.basic-grey {
+			margin-top:12%;
+		}
+	</style>
 </head>
 
 <body>
