--- a/vat.html
+++ b/vat.html
@@ -151,83 +151,90 @@
 	</h1>
 	<label>
 		<span style="coler:red">
-			Age(0~120) :
+			Age:<br/>(0~120)
 		</span>
-		<input id="man_age" type="number" name="man_age" placeholder="Your Age" min="0" max="120"/>
+		<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120)" min="0" max="120"/>
 	</label>
 	<label>
 		<span>
-			Height(50~250cm):
+			Height:<br/>(50~250cm)
 		</span>
-		<input id="man_height" type="number" name="man_height" placeholder="Your Height" min="50" max="250"
+		<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250"
 		/>
 	</label>
 	<label>
 		<span>
-			Weight(20~250kg):
+			Weight:<br/>(20~250kg)
 		</span>
-		<input id="man_weight" type="number" name="man_weight" placeholder="Your Weight" min="20" max="250"
+		<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250"
 		/>
 	</label>
 	<label>
 		<span>
-			WC(15~250cm):
+			WC:<br/>(15~250cm)
 		</span>
-		<input id="man_wc" type="number" name="man_wc" placeholder="Your wc" min="15" max="250"
+		<input id="woman_wc" type="number" name="woman_wc" placeholder="WC(15~250cm)" min="15" max="250"
 		/>
 	</label>
 	<label>
 		<span>
-			HC(15~250cm):
+			HC:<br/>(15~250cm)
 		</span>
-		<input id="man_hc" type="number" name="man_hc" placeholder="Your hc" min="15" max="250"
+		<input id="woman_hc" type="number" name="woman_hc" placeholder="HC(15~250cm)" min="15" max="250"
 		/>
 	</label>
 	<label>
 		<span>
-			Whole body fat mass(0~150kg):
+			Whole body fat mass:<br/>(0~150kg)
 		</span>
-		<input id="man_fat" type="number" name="man_fat" placeholder="Whole body fat mass" min="0" max="150"
+		<input id="woman_Whole_body_fat_mass" type="number" name="woman_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
 		/>
 	</label>
 	<label>
 		<span>
-			Whole body fat free mass(0~150kg):
+			Whole body fat free mass:<br/>(0~150kg)
 		</span>
-		<input id="man_fat_free" type="number" name="man_fat_free" placeholder="Whole body fat free mass" min="0" max="150"
+		<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150"
 		/>
 	</label>
 	<label>
 		<span>
-			Trunk fat mass(0~80kg):
+			Trunk fat mass:<br/>(0~80kg)
 		</span>
-		<input id="man_trunk_fat" type="number" name="man_trunk_fat" placeholder="Trunk fat mass" min="0" max="80"
+		<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"
 		/>
 	</label>
 	
 	<label>
 		<span>
-			Trunk fat free mass(0~80kg):
+			Trunk fat free mass:<br/>(0~80kg)
 		</span>
-		<input id="man_trunk_fat_free" type="number" name="man_trunk_fat_free" placeholder="Leg fatfree mass" min="0" max="40"
+		<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"
 		/>
 	</label>
 	<label>
 		<span>
-			Leg fatfree mass(0~40kg):
+			Leg fatfree mass:<br/>(0~40kg)
 		</span>
-		<input id="man_leg_fatfree" type="number" name="man_leg_fatfree" placeholder="Leg fatfree mass" min="0" max="40"
+		<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"
 		/>
 	</label>
 	<label>
 		<span>
-			Basal metabolic rate(500~30000kJ):
+			Basal metabolic rate:<br/>(500~30000kJ)
 		</span>
-		<input id="man_basal_metabolic_rate" type="number" name="man_basal_metabolic_rate" placeholder="Basal metabolic rate" min="500" max="30000"
+		<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"
 		/>
 	</label>
 	<label>
-		<input type="button" class="button" id="man_button" name="man_button" value="Calculate (please click)" onclick="getRisk('woman')"/>
+		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate (please click)" onclick="getRisk('woman')"/>
+	</label>
+	
+	<label style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
+		<span>
+			result:
+		</span>
+		<div id="woman_result_info"></div>
 	</label>
 </form>
 
@@ -292,15 +299,28 @@
 			if(sex==1){
 				/** 原公式
 			   VAT = [3.643001 
-					+ (-0.01225432)*Height + (0.85249813)*ln(Weight) 
-					+ (31834.57241168)*Height^(-2) + (-92.20461434)*ln(Weight)^(-2) 
-					+ (0.00218163)*Age*ln(Weight)]^2 **/
+						+ (-0.01225432)*Height + (0.85249813)*ln(Weight) 
+						+ (31834.57241168)*Height^(-2) + (-92.20461434)*ln(Weight)^(-2) 
+						+ (0.00218163)*Age*ln(Weight)]^2 **/
 				var VAT = Math.pow(3.643001 + (-0.01225432)*$(Height).val() + (0.85249813)*Math.log($(Weight).val()) + (31834.57241168)* Math.pow($(Height).val(),-2) + (-92.20461434)* Math.pow(Math.log($(Weight).val()),-2) + (0.00218163)*$(Age).val()*Math.log($(Weight).val()),2);
 				
 				$(result_info).html("公式1记算:" + VAT);
 				$(result_span).fadeIn("slow");
 			}
-			
+			// 女
+			if(sex==0){
+				/** 原公式
+			   VAT = [-2.538071 
+						+ (-0.00618113)*Height + (1.48219618)*ln(Weight) 
+						+ (-1155.36103141)*Age^(-2) + (7513.36791386)*Height^(-2) 
+						+ (55.13712057)*Height^(-1) + (3.89774410)*Height^(-0.5) 
+						+ (0.00000000)*Height^0.5 + (-0.00001134)*Height^2 
+						+ (-26.10013911)*ln(Weight)^(-2)]^2 **/
+				var VAT = Math.pow(-2.538071+ (-0.00618113)*$(Height).val() + (1.48219618)*Math.log($(Weight).val())+ (-1155.36103141)*Math.pow($(Age).val(),-2) + (7513.36791386)*Math.pow($(Height).val(),-2)+ (55.13712057)*Math.pow($(Height).val(),-1) + (3.89774410)* Math.pow($(Height).val(),-0.5)+ (0.00000000)*Math.pow($(Height).val(),0.5) + (-0.00001134)*Math.pow($(Height).val(),2)+ (-26.10013911)*Math.pow(Math.log($(Weight).val()),-2),2);
+				
+				$(result_info).html("公式1记算:" + VAT);
+				$(result_span).fadeIn("slow");
+			}
 		}
 		
 	
