--- a/vat.html
+++ b/vat.html
@@ -341,7 +341,7 @@
 	
 	
 	function checkForm1() {	
-        /**    if ($(Age).val()!=null && $(Age).val()!="" && $(Age).val()>=0 && $(Age).val()<=120 ) {
+            if ($(Age).val()!=null && $(Age).val()!="" && $(Age).val()>=0 && $(Age).val()<=120 ) {
                 $(Age).css("border", "");
             } else {
                 $(Age).css("border", "1px solid red");
@@ -363,7 +363,7 @@
                 $(Weight).css("border", "1px solid red");
 				$(Weight).focus();
 				return false;
-            }**/
+            }
 			return true;
 	}
 	function checkForm2_isnull() {	
