--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<label>
 		<a href="vat.html"><input type="button" class="button" value="计算腹部脂肪VAT" /></a>
 	
-		<input type="button" class="button" value="计算内脏脂肪ASAT" />
+		<a href="asat.html"><input type="button" class="button" value="计算内脏脂肪ASAT" /></a>
 	
-		<input type="button" class="button" value="计算去脂肌肉FFMV" />
+		<a href="ffmv.html"><input type="button" class="button" value="计算去脂肌肉FFMV" /></a>
 	</label>
 </form>
 
