--- a/asat.html
+++ b/asat.html
@@ -382,7 +382,7 @@
 						+ (2.19678017)*Math.log(Weight) + (0.07959460)*Math.log(WC) 
 						+ (0.47734072)*Math.log(HC) + (-977.13304857)*Math.pow(Age,-2) 
 						+ (5120.28211830)*Math.pow(Height,-2) + (90.29647806)*Math.pow(Height,-1) 
-						+ (6.48753355)*Math.pow(Height,-0.5) + (48.79664357)*Math.log(Weight)^(-2) 
+						+ (6.48753355)*Math.pow(Height,-0.5) + (48.79664357)*Math.pow(Math.log(Weight),-2) 
 						+ (-1.90773968)*Math.pow(Math.log(Weight),-1) + (-4.59817308)*Math.pow(Math.log(Weight),-0.5) 
 						+ (-46.67987521)*Math.pow(Math.log(WC),-2) + (88.37350327)*Math.pow(Math.log(HC),-2) 
 						+ (-4.33228504)*Math.pow(Math.log(HC),-1) + (-9.66341971)*Math.pow(Math.log(HC),-0.5) 
