--- a/asat.html
+++ b/asat.html
@@ -9,9 +9,9 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title>内脏脂肪ASAT</title>
 
-<script src="jquery-1.12.4.min.js"></script>
-<script src="common.js"></script>
-<link rel="stylesheet" href="css.css" media="all">
+<script src="static/jquery-1.12.4.min.js"></script>
+<script src="static/common.js"></script>
+<link rel="stylesheet" href="static/css.css" media="all">
 <style type="text/css">
 .basic-grey {
 	width:580px;
