--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta content="zh-cn" http-equiv="Content-Language" />
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>论文标题-首页</title>
-	<link rel="stylesheet" href="css.css" media="all">
+	<link rel="stylesheet" href="static/css.css" media="all">
 	<style type="text/css">
 		.basic-grey {
 			margin-top:12%;
